syntax = "proto3";
import "scalapb.proto";
option java_package = "br.ufrj.gta.common.model";

message DeviceInfo {
  string id = 1;
  string ver = 2;
  uint32 ram_usage = 3;
  uint32 disk_usage = 4;
  uint32 cpu_usage = 5;
}

message SensorInfo {
  string sensor_type = 1;
  float amount = 2;
  float var_amount = 3;
  float min_amount = 4;
  float max_amount = 5;
  StatusType status = 6;
}

enum StatusType {
  UNKNOWN = 0;
  OK = 1;
  WARN = 2;
  DOWN = 3;
}

message SensorRegistry {
  uint64 timestamp = 1;
  DeviceInfo device = 2 [(scalapb.field).no_box = true];
  SensorInfo sensor = 3 [(scalapb.field).no_box = true];
}